--- a/quotes.html
+++ b/quotes.html
@@ -16,6 +16,7 @@
             <li><blockquote><p>Every strike brings me closer to the next home run.</p><footer><cite>— Babe Ruth</cite></footer></blockquote>
             <li><blockquote><p>Definiteness of purpose is the starting point of all achievement.</p><footer><cite>— W. Clement Stone</cite></footer></blockquote>
             <li><blockquote><p>Life is what happens to you while you’re busy making other plans.</p><footer><cite>— John Lennon</cite></footer></blockquote>
+            <li><blockquote><p>I love Git</p><footer><cite>— Joe Ray</cite></footer></blockquote>
         </ol>
     </body>
 </html>
